<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">K-9 Mail</string>
    <string name="shortcuts_title">K-9 Accounts</string>
    <string name="unread_widget_label">K-9 Unread</string>
    <string name="remote_control_label">K-9 Mail remote control</string>
    <string name="remote_control_desc">Allows this application to control K-9 Mail activities and settings.</string>
    <string name="app_authors">Google, The K-9 Dog Walkers.</string>
    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to K-9 Mail</string>
    <string name="accounts_welcome"><![CDATA[
<p>
K-9 Mail is a powerful free email client for Android.
</p><p>
Its improved features include:
</p>
<ul>
  <li>Push mail using IMAP IDLE</li>
  <li>Better performance</li>
  <li>Message refiling</li>
  <li>Email signatures</li>
  <li>Bcc-to-self</li>
  <li>Folder subscriptions</li>
  <li>All folder synchronization</li>
  <li>Return-address configuration</li>
  <li>Keyboard shortcuts</li>
  <li>Better IMAP support</li>
  <li>Saving attachments to SD</li>
  <li>Empty Trash</li>
  <li>Message sorting</li>
  <li>…and more</li>
</ul>
<p>
Please note that K-9 does not support most free Hotmail accounts and, like many mail clients, has
some quirks when talking to Microsoft Exchange.
</p><p>
Please submit bug reports, contribute new features and ask questions at
<a href="https://github.com/k9mail/k-9/">https://github.com/k9mail/k-9/</a>.
</p>
    ]]></string>
    <string name="default_signature">-- \nSent from my Android device with K-9 Mail. Please excuse my brevity.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from K-9 Mail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="move_action">Move</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="debug_enable_debug_logging_title">Enable debug logging</string>
    <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
    <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
    <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
    <string name="global_settings_flag_label">Show stars</string>
    <string name="global_settings_flag_summary">Stars indicate flagged messages</string>
    <string name="global_settings_checkbox_label">Multi-select checkboxes</string>
    <string name="global_settings_checkbox_summary">Always show multi-select checkboxes</string>
    <string name="global_settings_preview_lines_label">Preview lines</string>
    <string name="global_settings_show_correspondent_names_label">Show correspondent names</string>
    <string name="global_settings_show_correspondent_names_summary">Show correspondent names rather than their email addresses</string>
    <string name="global_settings_sender_above_subject_label">Correspondent above subject</string>
    <string name="global_settings_sender_above_subject_summary">Show correspondent names above the subject line, rather than below it</string>
    <string name="global_settings_show_contact_name_label">Show contact names</string>
    <string name="global_settings_show_contact_name_summary">Use recipient names from Contacts when available</string>
    <string name="global_settings_registered_name_color_label">Colorize contacts</string>
    <string name="global_settings_registered_name_color_default">Don\'t colorize names in your contact list</string>
    <string name="global_settings_folderlist_wrap_folder_names_label">Wrap long folder names</string>
    <string name="global_settings_folderlist_wrap_folder_names_summary">Use multiple lines to show long folder names</string>
    <string name="global_settings_messageview_fixedwidth_label">Fixed-width fonts</string>
    <string name="global_settings_messageview_fixedwidth_summary">Use a fixed-width font when showing plain-text messages</string>
    <string name="global_settings_messageview_autofit_width_label">Auto-fit messages</string>
    <string name="global_settings_messageview_autofit_width_summary">Shrink messages to fit the screen</string>
    <string name="global_settings_messageview_return_to_list_label">Return to list after delete</string>
    <string name="global_settings_messageview_return_to_list_summary">Return to message list after message deletion</string>
    <string name="global_settings_messageview_show_next_label">Show next message after delete</string>
    <string name="global_settings_messageview_show_next_summary">Show next message by default after message deletion</string>
    <string name="global_settings_confirm_actions_title">Confirm actions</string>
    <string name="global_settings_confirm_actions_summary">Show a dialog whenever you perform selected actions</string>
    <string name="global_settings_privacy_hide_useragent">Hide mail client</string>
    <string name="global_settings_privacy_hide_useragent_detail">Remove K-9 User-Agent from mail headers</string>
    <string name="global_settings_privacy_hide_timezone">Hide timezone</string>
    <string name="global_settings_privacy_hide_timezone_detail">Use UTC instead of local timezone in mail headers and reply header</string>
    <string name="global_settings_notification_hide_subject_title">Hide subject in notifications</string>
    <string name="global_settings_notification_quick_delete_title">Show \'Delete\' button</string>
    <string name="global_settings_notification_quick_delete_description">Show a button in the notification that allows quick message deletion</string>
    <string name="global_settings_lock_screen_notification_visibility_title">Lock Screen Notifications</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="quiet_time_description">Disable ringing, buzzing and flashing at night</string>
    <string name="quiet_time_notification">Disable notifications</string>
    <string name="quiet_time_notification_description">Completely disable notifications during Quiet Time</string>
    <string name="quiet_time_starts">Quiet Time starts</string>
    <string name="quiet_time_ends">Quiet Time ends</string>
    <string name="compact_action">Compact account</string>
    <string name="account_settings_crypto_app">Enable OpenPGP support</string>
    <string name="notifications_title">Notifications</string>
    <string name="folder_list_display_mode_label">Show folders…</string>
    <string name="folder_list_display_mode_all">All folders</string>
    <string name="folder_list_display_mode_first_class">1st Class folders</string>
    <string name="folder_list_display_mode_first_and_second_class">1st &amp; 2nd Class folders</string>
    <string name="folder_list_display_mode_not_second_class">Hide 2nd Class folders</string>
    <string name="display_preferences">Display</string>
    <string name="global_preferences">Global</string>
    <string name="debug_preferences">Debugging</string>
    <string name="privacy_preferences">Privacy</string>
    <string name="network_preferences">Network</string>
    <string name="interaction_preferences">Interaction</string>
    <string name="accountlist_preferences">Account list</string>
    <string name="messagelist_preferences">Message lists</string>
    <string name="messageview_preferences">Messages</string>
    <string name="folderlist_preferences">Folder lists</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_message_theme_label">Message view theme</string>
    <string name="settings_compose_theme_label">Composer theme</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_message_theme_selection_label">Fixed message theme</string>
    <string name="settings_message_theme_selection_summary_off">Select the message view theme while viewing the message</string>
    <string name="settings_message_theme_selection_summary_on">Use a fixed message view theme</string>
    <string name="background_ops_label">Background sync</string>
    <string name="batch_select_all">Select all</string>
    <string name="animations_title">Animation</string>
    <string name="animations_summary">Use gaudy visual effects</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Enable gesture control</string>
    <string name="volume_navigation_title">Volume key navigation</string>
    <string name="start_integrated_inbox_title">Start in Unified Inbox</string>
    <string name="measure_accounts_title">Show account size</string>
    <string name="measure_accounts_summary">Turn off for faster display</string>
    <string name="count_search_title">Count search results</string>
    <string name="count_search_summary">Turn off for faster display</string>
    <string name="hide_special_accounts_title">Hide special accounts</string>
    <string name="hide_special_accounts_summary">Hide the unified inbox and all messages accounts</string>
    <string name="font_size_settings_title">Font size</string>
    <string name="font_size_settings_description">Configure font size</string>
    <string name="miscellaneous_preferences">Miscellaneous</string>
    <string name="settings_attachment_default_path">Save attachments to…</string>
    <string name="global_settings_background_as_unread_indicator_label">Change colour when read</string>
    <string name="global_settings_background_as_unread_indicator_summary">A different background will show that the message has been read</string>
    <string name="global_settings_threaded_view_label">Threaded view</string>
    <string name="global_settings_threaded_view_summary">Group messages by conversation</string>
    <string name="global_settings_splitview_mode_label">Show split-screen</string>
    <string name="global_settings_show_contact_picture_label">Show contact pictures</string>
    <string name="global_settings_show_contact_picture_summary">Show contact pictures in the message list</string>
    <string name="global_settings_colorize_missing_contact_pictures_label">Colorize contact pictures</string>
    <string name="global_settings_colorize_missing_contact_pictures_summary">Colorize missing contact pictures</string>
    <string name="global_settings_messageview_visible_refile_actions_title">Visible message actions</string>
    <string name="global_settings_messageview_visible_refile_actions_summary">Show selected actions in the message view menu</string>
</resources>