<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/search"
        android:icon="?attr/iconActionSearch"
        android:title="@string/search_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_folders"
        android:icon="?attr/iconActionSearchFolder"
        android:title="@string/filter_folders_action"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/check_mail"
        android:alphabeticShortcut="r"
        android:icon="?attr/iconActionRefresh"
        android:title="@string/check_mail_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:icon="?attr/iconActionCompose"
        android:title="@string/compose_action"
        app:showAsAction="always" />
    <item
        android:icon="?attr/iconFolder"
        android:title="@string/folder_list_display_mode_label">
        <menu>
            <item
                android:id="@+id/display_all"
                android:title="@string/folder_list_display_mode_all"/>
            <item
                android:id="@+id/display_1st_class"
                android:title="@string/folder_list_display_mode_first_class"/>
            <item
                android:id="@+id/display_1st_and_2nd_class"
                android:title="@string/folder_list_display_mode_first_and_second_class"/>
            <item
                android:id="@+id/display_not_second_class"
                android:title="@string/folder_list_display_mode_not_second_class"/>
        </menu>
    </item>
    <item
        android:id="@+id/send_messages"
        android:icon="?attr/iconActionUpload"
        android:title="@string/send_messages_action"/>
    <item
        android:id="@+id/empty_trash"
        android:alphabeticShortcut="e"
        android:icon="?attr/iconActionDelete"
        android:title="@string/empty_trash_action"/>
    <item
        android:id="@+id/compact"
        android:title="@string/compact_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/list_folders"
        android:icon="?attr/iconActionRefresh"
        android:title="@string/refresh_folders_action"/>
    <item
        android:id="@+id/settings"
        android:icon="?attr/iconActionSettings"
        android:title="@string/preferences_action"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/account_settings"
                android:title="@string/account_settings_action"/>
            <item
                android:id="@+id/app_settings"
                android:title="@string/global_settings_action"/>
        </menu>
    </item>

</menu>
