<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
        android:icon="?attr/iconActionDelete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        android:icon="?attr/iconActionMarkAsRead"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
        android:icon="?attr/iconActionMarkAsUnread"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
        android:icon="?attr/iconActionArchive"
        app:showAsAction="always" />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
        android:icon="?attr/iconActionMove"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
        android:icon="?attr/iconActionCopy"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
        android:icon="?attr/iconActionFlag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
        android:icon="?attr/iconActionUnflag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        android:icon="?attr/iconActionSpam"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_all"
        android:icon="?attr/iconActionSelectAll"
        android:title="@string/batch_select_all"
        app:showAsAction="never" />
</menu>
